@@ -20,8 +20,9 @@
 // Sanguino or RepRap Motherboard with direct drive extruders: 1
 // RepRap Motherboard with RS485 extruders: 2
 // Arduino Mega: 3
+// Ultimaker users: This should be 3 if your system uses an Arduino Mega, not 1.1 or something that you see on your Ultimaker Electronics.
 
-#define MOTHERBOARD 3
+#define MOTHERBOARD 3 
 
 // The width of Henry VIII's thumb (or something).
 
@@ -31,127 +32,16 @@
 
 #define EXTRUDER_COUNT 1
 
-//*********************************************************************************************
-
-// These settings are mainly for Darwin
-
-#if MOTHERBOARD == 1
-
-// Temperature measurement
-// Uncomment ONE of the next three
-#define USE_THERMISTOR
-//#define AD595_THERMOCOUPLE
-//#define MAX6675_THERMOCOUPLE
-
-// Uncomment the next line if this is driving a paste extruder
-//#define PASTE_EXTRUDER
-
-
-// Set to 1 if enable pins are inverting
-// For RepRap stepper boards version 1.x the enable pins are *not* inverting.
-// For RepRap stepper boards version 2.x and above the enable pins are inverting.
-#define INVERT_ENABLE_PINS 0
-
-// Set to one if the axis opto-sensor outputs inverting (ie: 1 means open, 0 means closed)
-// RepRap opto endstops with H21LOI sensors are not inverting; ones with H21LOB
-// are inverting.
-
-//     Set [XYZ]_ENDSTOP_INVERTING to "true" for using microswitches.
-#define X_ENDSTOP_INVERTING true
-#define Y_ENDSTOP_INVERTING true
-#define Z_ENDSTOP_INVERTING true
-
-// Set ENDSTOP_PULL_UPS to "true" if you're using microswitches
-// This will put a logical high in the input pins by connecting an internal 20K resistor to Vcc.
-#define ENDSTOP_PULL_UPS true
-
-#define X_STEPS_PER_MM   7.99735
-#define X_STEPS_PER_INCH (X_STEPS_PER_MM*INCHES_TO_MM) // *RO
-#define INVERT_X_DIR 0
-
-#define Y_STEPS_PER_MM   7.99735
-#define Y_STEPS_PER_INCH (Y_STEPS_PER_MM*INCHES_TO_MM) // *RO
-#define INVERT_Y_DIR 0
-
-#define Z_STEPS_PER_MM   320
-#define Z_STEPS_PER_INCH (Z_STEPS_PER_MM*INCHES_TO_MM) // *RO
-#define INVERT_Z_DIR 0
-
-// Stepper-driven extruder
-// E_STEPS_PER_MM is the number of steps needed to 
-// extrude 1mm out of the nozzle.  E0 for extruder 0;
-// E1 for extruder 1, and so on.
-
-//#define E_STEPS_PER_MM   0.9     // NEMA 17 extruder 5mm diameter drive - empirically adjusted
-#define E0_STEPS_PER_MM   2.2      // NEMA 17 59/11 geared extruder 8mm diameter drive
-#define E1_STEPS_PER_MM   2.2      // NEMA 17 59/11 geared extruder 8mm diameter drive
-
-// The temperature routines get called each time the main loop
-// has gone round this many times
-
-#define SLOW_CLOCK 2000
-
-#endif
-
-//**********************************************************************************************
-
-// These settings are mainly for a standard Mendel
-
-#if MOTHERBOARD == 2
-
-// Set to 1 if enable pins are inverting
-// For RepRap stepper boards version 1.x the enable pins are *not* inverting.
-// For RepRap stepper boards version 2.x and above the enable pins are inverting.
-#define INVERT_ENABLE_PINS 1
-
-// Set ENDSTOP_PULL_UPS to "true" if you're using microswitches
-// This will put a logical high in the input pins by connecting an internal 20K resistor to Vcc.
-#define ENDSTOP_PULL_UPS true
-
-// Set to one if the axis opto-sensor outputs inverting (ie: 1 means open, 0 means closed)
-// RepRap opto endstops with H21LOI sensors are not inverting; ones with H21LOB
-// are inverting.
-//     Set [XYZ]_ENDSTOP_INVERTING to "true" for using microswitches.
-
-#define X_ENDSTOP_INVERTING true
-#define Y_ENDSTOP_INVERTING true
-#define Z_ENDSTOP_INVERTING true
-
-#define MY_NAME 'H'           // Byte representing the name of this device
-#define E0_NAME '0'           // Byte representing the name of extruder 0
-#define E1_NAME '1'           // Byte representing the name of extruder 1
-
-#define RS485_MASTER  1       // *RO
-
-// Axis scaling in stepper-motor steps per mm of movement
-
-#define X_STEPS_PER_MM   10.047
-#define X_STEPS_PER_INCH (X_STEPS_PER_MM*INCHES_TO_MM) // *RO
-#define INVERT_X_DIR 0
-
-#define Y_STEPS_PER_MM   10.047
-#define Y_STEPS_PER_INCH (Y_STEPS_PER_MM*INCHES_TO_MM) // *RO
-#define INVERT_Y_DIR 0
-
-#define Z_STEPS_PER_MM   833.398
-#define Z_STEPS_PER_INCH (Z_STEPS_PER_MM*INCHES_TO_MM) // *RO
-#define INVERT_Z_DIR 0
-
-// Stepper-driven extruder
-// E_STEPS_PER_MM is the number of steps needed to 
-// extrude 1mm out of the nozzle.  E0 for extruder 0;
-// E1 for extruder 1, and so on.
-
-//#define E_STEPS_PER_MM   0.9     // NEMA 17 extruder 5mm diameter drive - empirically adjusted
-#define E0_STEPS_PER_MM   2.2      // NEMA 17 59/11 geared extruder 8mm diameter drive
-#define E1_STEPS_PER_MM   2.2      // NEMA 17 59/11 geared extruder 8mm diameter drive
-
-#endif
-
-//**********************************************************************************************
-
-// These settings are mainly for a Mendel with an Arduino Mega controller and Pololu stepper drivers
-// See http://reprap.org/wiki/Pololu_Electronics
+/*********************************************************************************************
+*  _   _ _ _   _                 _
+* | | | | | |_(_)_ __ ___   __ _| | _____ _ __
+* | | | | | __| | '_ ` _ \ / _` | |/ / _ \ '__|
+* | |_| | | |_| | | | | | | (_| |   <  __/ |
+*  \___/|_|\__|_|_| |_| |_|\__,_|_|\_\___|_|
+* 
+* Valid for versions: 1.0 and 1.1
+* For documentation, see http://www.ultimaker.com/
+*********************************************************************************************/
 
 #if MOTHERBOARD == 3
 
@@ -183,18 +73,15 @@
 // Axis scaling in stepper-motor steps per mm of movement
 
 // Select 1/16 STEP!
-#define X_STEPS_PER_MM   79.87220447 //Ultimaker's belt pitch is 2.032mm. 2.032*20=40.064. 40.64/200/16 mm/step
-#define X_STEPS_PER_INCH (X_STEPS_PER_MM*INCHES_TO_MM) // *RO
-#define INVERT_X_DIR 0
+#define X_STEPS_PER_MM   79.87220447 //Ultimaker's belt pitch is 2.032mm. 2.032*20=40.064. 40.064/200/16 mm/step
+#define INVERT_X_DIR 1
 
 // Select 1/16 STEP!
 #define Y_STEPS_PER_MM   79.87220447
-#define Y_STEPS_PER_INCH (Y_STEPS_PER_MM*INCHES_TO_MM) // *RO
 #define INVERT_Y_DIR 0
 
 // This stepper driver should be in QUARTER STEP MODE (LOW/HIGH/LOW I think)
-#define Z_STEPS_PER_MM   200*8/1.25 //6667.184 
-#define Z_STEPS_PER_INCH (Z_STEPS_PER_MM*INCHES_TO_MM) // *RO
+#define Z_STEPS_PER_MM   200*8/1.25
 #define INVERT_Z_DIR 1
 
 // Stepper-driven extruder
@@ -214,6 +101,7 @@
 // If you want to enable fancy stuff like RGB LEDs for feedback and just to show off.
 // Make sure FANCY is defined if you want to have this enabled, otherwise comment it out.
 #define FANCY
+#define FANCY_LCD
 
 #endif
 
@@ -293,6 +181,13 @@
 #define B_TEMP_PID_IGAIN 0.07
 #define B_TEMP_PID_DGAIN 1
 
+// The things below should not be changed unless you know what you're doing:
+
+#define X_STEPS_PER_INCH (X_STEPS_PER_MM*INCHES_TO_MM) // *RO
+#define Y_STEPS_PER_INCH (Y_STEPS_PER_MM*INCHES_TO_MM) // *RO
+#define Z_STEPS_PER_INCH (Z_STEPS_PER_MM*INCHES_TO_MM) // *RO
+
+
 //our command string length
 
 #define COMMAND_SIZE 128 // *RO
@@ -343,31 +238,5 @@ inline void resetTimer()
 {
   TCNT2 = 0;
 }
-
-#endif
-
-//*************************************************************************
-
-#if 0
-// Green machine:
-//#define ENDSTOPS_INVERTING 0
-
-// parameters for the Bath U. mendel prototype
-#define X_STEPS_PER_MM   13.333333
-#define X_STEPS_PER_INCH (X_STEPS_PER_MM*INCHES_TO_MM)
-#define INVERT_X_DIR 0
-
-#define Y_STEPS_PER_MM   13.333333
-#define Y_STEPS_PER_INCH (Y_STEPS_PER_MM*INCHES_TO_MM)
-#define INVERT_Y_DIR 0
-
-// Green machine:
-#define Z_STEPS_PER_MM   944.88
-// Fat Z cog machine:
-//#define Z_STEPS_PER_MM   558.864
-// Standard Mendel:
-//#define Z_STEPS_PER_MM   833.398
-#define Z_STEPS_PER_INCH (Z_STEPS_PER_MM*INCHES_TO_MM)
-#define INVERT_Z_DIR 0
 
 #endif
